temporary fix for page overflow on index

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -84,5 +84,7 @@
 }
 
 .inner {
+  max-height: calc(100vh - 50px);
+  overflow: scroll;
   margin: 1em;
 }
